--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/general.css">
   <link href="css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +32,15 @@
             and captivate the world with your newfound confidence. Embrace your beauty and
             unveil a more radiant, authentic version of yourself today.
           </p>
-          <a href="#" class="btn btn--full">Start here</a>
-          <a href="#" class="btn btn--outline">Find out more</a>
+          <div class="button-container">
+            <a href="#" class="btn btn--full">Start here</a>
+            <a href="#" class="btn btn--outline">Find out more</a>
+          </div>
         </div>
       </div>
 
     </section>
+
   </main>
 
 </body>
