add how it works section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,62 @@
 
     </section>
 
+    <section class="how-it-works">
+      <div class="container">
+        <div class="z-pattern-box grid--2-cols">
+
+          <img class="z-img z-right" src="img/products-how.webp" alt="">
+
+          <div class="z-text-box">
+            <h2 class="heading-secondary">
+              Feel beautiful every day!
+            </h2>
+            <p class="z-text">
+              Our carefully crafted formulas are designed to enhance your natural features and boost your confidence.
+              With our range of high-quality products, you can effortlessly achieve stunning results that will leave
+              you
+              looking and
+              feeling your best. Whether it's a radiant glow, flawless complexion, or captivating eyes, our cosmetics
+              are here to unlock your inner beauty.
+            </p>
+          </div>
+        </div>
+
+        <div class="z-pattern-box  grid--2-cols">
+
+          <img class="z-img" src="img/business-woman.webp" alt="">
+
+          <div class="z-text-box">
+            <h2 class="heading-secondary">
+              Beauty unleashed!
+            </h2>
+            <p class="z-text">
+              We specialize in unveiling elegance through our exceptional range of beauty products. Our meticulously
+              crafted cosmetics are designed to enhance your natural charm and highlight your unique features. With a
+              blend of innovation and timeless sophistication, we invite you to experience a new level of beauty that
+              radiates confidence and allure.
+            </p>
+          </div>
+        </div>
+        <div class="z-pattern-box grid--2-cols">
+
+          <img class="z-img z-right" src="img/embrace-transformation.jpg" alt="">
+
+          <div class="z-text-box">
+            <h2 class="heading-secondary">
+              Embrace Your Transformation
+            </h2>
+            <p class="z-text">
+              Elevate your self-love and confidence with our exquisite beauty products. By enhancing your natural
+              beauty, our carefully curated cosmetics ignite a journey of self-discovery and empowerment. Embrace your
+              unique features, radiate confidence, and unlock a world where beauty fuels the flame of self-love.
+              Experience the transformative power of our products and embark on a path to unparalleled self-assurance
+              and contentment.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
