add testimonials section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -94,6 +96,73 @@
               and contentment.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="container margin-bottom-big">
+        <h2 class="heading-secondary center-text">What people think about us!</h2>
+      </div>
+
+      <div class="container">
+        <div class="grid--3-cols testimonial-grid">
+
+          <div class="testimonial-card">
+            <img src="img/models/rafaella-mendes-diniz.webp" alt="" class="testimonial-img">
+            <div class="testimonial-rating">
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+            </div>
+            <blockquote class="testimonial-description">
+              This brand empowers me as a model like no other. Their cosmetics enhance my natural beauty, giving me the
+              confidence to shine on and off the runway. A game-changer.
+            </blockquote>
+            <p class="testimonial-name">
+              Rafaella Mendes, <span class="job-title">Model</span>
+            </p>
+          </div>
+
+          <div class="testimonial-card">
+            <img src="img/models/valerie-elash.webp" alt="" class="testimonial-img">
+            <div class="testimonial-rating">
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+            </div>
+            <blockquote class="testimonial-description">
+              This brand's empowering cosmetics have transformed my beauty routine. As a senior vendor manager, I face
+              various challenges, but their products boost my confidence.
+            </blockquote>
+            <p class="testimonial-name">
+              Valerie Elash, <span class="job-title">Manager</span>
+            </p>
+          </div>
+
+
+          <div class="testimonial-card">
+            <img src="img/models/pouriya-kafaei.webp" alt="Pouriya Kafaei" class="testimonial-img">
+            <div class="testimonial-rating">
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star"></ion-icon>
+              <ion-icon class="star-rate" name="star-half"></ion-icon>
+            </div>
+            <blockquote class="testimonial-description">
+              These cosmetics are my on-screen magic. They empower my performance, enhancing my features and boosting my
+              confidence. A must-have for every actress.
+            </blockquote>
+            <p class="testimonial-name">
+              Pouriya Kafaei, <span class="job-title">Actress</span>
+            </p>
+          </div>
+
         </div>
       </div>
     </section>
