add highlights section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div>
     </section>
 
-    <section class="testimonials">
+    <section class="testimonials-section">
       <div class="container margin-bottom-big">
         <h2 class="heading-secondary center-text">What people think about us!</h2>
       </div>
@@ -161,6 +161,59 @@
             <p class="testimonial-name">
               Pouriya Kafaei, <span class="job-title">Actress</span>
             </p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="highlights-section">
+      <div class="container">
+        <h2 class="heading-secondary">Highlights</h2>
+        <div class="highlights-cards grid--3-cols">
+
+          <div class="highlights-card">
+            <img src="img/products/apple-almond.webp" alt="" class="card-img">
+            <div class="card-body">
+              <h3 class="card-heading">
+                Bliss Moisturizer
+              </h3>
+              <p class="card-description">
+                Introducing our Almond Bliss Moisturizer, a tiny jar packed with immense skincare benefits! This little
+                wonder is crafted with the finest almonds to provide your skin with a luxurious hydration experience.
+              </p>
+            </div>
+            <a href="#" class="card-link">Get Now</a>
+          </div>
+
+          <div class="highlights-card">
+            <img src="img/products/perfum.webp" alt="" class="card-img">
+            <div class="card-body">
+              <h3 class="card-heading">
+                Perfum Enchanté
+              </h3>
+              <p class="card-description">
+                Indulge in the essence of pure luxury with our mesmerizing fragrance, Enchanté. From the moment the
+                scent
+                touches your skin, you'll be transported to a world of unparalleled elegance and sophistication.
+              </p>
+            </div>
+            <a href="#" class="card-link">Get Now</a>
+          </div>
+
+          <div class="highlights-card">
+            <img src="img/products/make-up.webp" alt="" class="card-img">
+            <div class="card-body">
+              <h3 class="card-heading">
+                Make-up Shades
+              </h3>
+              <p class="card-description">
+                Elevate your beauty routine with Make-up Shades, the exquisite cosmetic makeup line designed to enhance
+                your natural allure. From captivating eyes to flawless complexions, express yourself like
+                never before.
+              </p>
+            </div>
+            <a href="#" class="card-link">Get Now</a>
           </div>
 
         </div>
