add call to action section

--- a/index.html
+++ b/index.html
@@ -219,6 +219,42 @@
         </div>
       </div>
     </section>
+
+    <section class="cta-section">
+
+      <div class="container">
+        <h2 class="heading-secondary">Get in touch with us!</h2>
+
+        <div class="cta-grid">
+          <div>
+            <form class="cta-form">
+              <div>
+                <label for="name">Name</label><br>
+                <input type="text" class="cta-name" id="name" placeholder="Your name..." required>
+              </div>
+              <div>
+                <label for="email">Email</label><br>
+                <input type="email" id="email" class="cta-email" placeholder="Your email..." required>
+              </div>
+              <div>
+                <label for="phone">WhatsApp</label><br>
+                <input type="tel" id="phone" class="cta-phone" placeholder="Your phone..." required>
+              </div>
+              <div>
+                <label for="message">Your message</label><br>
+                <textarea rows="5" cols="" placeholder="Type your message here..." required></textarea>
+              </div>
+              <div class="cta-button">
+                <button>Send message</button>
+              </div>
+            </form>
+          </div>
+
+          <div class="cta-img">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 </body>
