add footer skeleton

--- a/index.html
+++ b/index.html
@@ -257,6 +257,15 @@
     </section>
   </main>
 
+  <footer class="footer">
+    <div class="container grid-footer">
+      <div class="logo-col"></div>
+      <div class="address-col"></div>
+      <div class="nav-col"></div>
+      <div class="nav-col"></div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
