Add all footer content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -259,10 +260,47 @@
 
   <footer class="footer">
     <div class="container grid-footer">
-      <div class="logo-col"></div>
-      <div class="address-col"></div>
-      <div class="nav-col"></div>
-      <div class="nav-col"></div>
+      <div class="logo-col">
+        <!-- logo -->
+        <a href="#" class="logo">Lacey <span>Liliana</span></a>
+        <ul class="footer-social-links">
+          <li><ion-icon name="logo-instagram" class="footer-social-link"></ion-icon></li>
+          <li><ion-icon name="logo-twitter" class="footer-social-link"></ion-icon></li>
+          <li><ion-icon name="logo-facebook" class="footer-social-link"></ion-icon></li>
+        </ul>
+        <p class="copyright">
+          Copyright &#169; 2023 by Lacey Liliana. All rights reserverd.
+        </p>
+      </div>
+
+      <div class="address-col">
+        <h4 class="footer-heading">
+          Contact us
+        </h4>
+        <p class="address">
+          99982 Maxwell Circles Suite 751, Arizona 47709
+        </p>
+        <a href="tel:1-534-936-1290" class="footer-link">
+          1-534-936-1290
+        </a>
+        <a href="mailto:contact@lacey.com" class="footer-link">
+          contact@lacey.com
+        </a>
+      </div>
+
+      <div class="nav-col">
+        <h3 class="footer-heading">Account</h3>
+        <a href="" class="footer-link">Sign in</a>
+        <a href="" class="footer-link">Create</a>
+        <a href="" class="footer-link">Android app</a>
+      </div>
+
+      <div class="nav-col">
+        <h3 class="footer-heading">Company</h3>
+        <a href="" class="footer-link">About</a>
+        <a href="" class="footer-link">Partners</a>
+        <a href="" class="footer-link">Get involved</a>
+      </div>
     </div>
   </footer>
 
