fix a few typos

--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
             </h2>
             <p class="z-text">
               Our carefully crafted formulas are designed to enhance your natural features and boost your confidence.
-              With our range of high-quality products, you can effortlessly achieve stunning results that will leave
-              you
-              looking and
-              feeling your best. Whether it's a radiant glow, flawless complexion, or captivating eyes, our cosmetics
-              are here to unlock your inner beauty.
+              With our range of high-quality products, you can effortlessly achieve stunning results that will leave you
+              looking and feeling your best. Whether it's a radiant glow, flawless complexion, or captivating eyes, our
+              cosmetics are here to unlock your inner beauty.
             </p>
           </div>
         </div>
@@ -184,7 +182,7 @@
                 wonder is crafted with the finest almonds to provide your skin with a luxurious hydration experience.
               </p>
             </div>
-            <a href="#" class="card-link">Get Now</a>
+            <a href="#" class="card-link">Get it Now</a>
           </div>
 
           <div class="highlights-card">
@@ -199,7 +197,7 @@
                 touches your skin, you'll be transported to a world of unparalleled elegance and sophistication.
               </p>
             </div>
-            <a href="#" class="card-link">Get Now</a>
+            <a href="#" class="card-link">Get it Now</a>
           </div>
 
           <div class="highlights-card">
@@ -214,7 +212,7 @@
                 never before.
               </p>
             </div>
-            <a href="#" class="card-link">Get Now</a>
+            <a href="#" class="card-link">Get it Now</a>
           </div>
 
         </div>
