add header navigation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+  <header class="header">
+    <a href="#" class="logo">Lacey <span>Liliana</span></a>
+    <nav>
+      <ul class="nav-links">
+        <li class="nav-link">How it works</li>
+        <li class="nav-link">Testmonials</li>
+        <li class="nav-link">Highlights</li>
+        <li class="nav-link">Find out more</li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
     <section class="section-hero">
