fix stupid mistake (li not having link elements nested)

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <a href="#" class="logo">Lacey <span>Liliana</span></a>
     <nav>
       <ul class="nav-links">
-        <li class="nav-link">How it works</li>
-        <li class="nav-link">Testmonials</li>
-        <li class="nav-link">Highlights</li>
-        <li class="nav-link">Find out more</li>
+        <li><a href="#" class="nav-link">How it works</a></li>
+        <li><a href="#" class="nav-link">Testimonials</a></li>
+        <li><a href="#" class="nav-link">Highlights</a></li>
+        <li><a href="#" class="nav-link">Find out more</a></li>
       </ul>
     </nav>
   </header>
