make in-page links work

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <a href="#" class="logo">Lacey <span>Liliana</span></a>
     <nav>
       <ul class="nav-links">
-        <li><a href="#" class="nav-link">How it works</a></li>
-        <li><a href="#" class="nav-link">Testimonials</a></li>
-        <li><a href="#" class="nav-link">Highlights</a></li>
-        <li><a href="#" class="nav-link">Find out more</a></li>
+        <li><a href="#how-it-works" class="nav-link">How it works</a></li>
+        <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
+        <li><a href="#highlights" class="nav-link">Highlights</a></li>
+        <li><a href="#cta" class="nav-link">Find out more</a></li>
       </ul>
     </nav>
   </header>
@@ -55,7 +55,7 @@
 
     </section>
 
-    <section class="how-it-works">
+    <section class="how-it-works" id="how-it-works">
       <div class="container">
         <div class="z-pattern-box grid--2-cols">
 
@@ -110,7 +110,7 @@
       </div>
     </section>
 
-    <section class="testimonials-section">
+    <section class="testimonials-section" id="testimonials">
       <div class="container margin-bottom-big">
         <h2 class="heading-secondary center-text">What people think about us!</h2>
       </div>
@@ -177,7 +177,7 @@
       </div>
     </section>
 
-    <section class="highlights-section">
+    <section class="highlights-section" id="highlights">
       <div class="container">
         <h2 class="heading-secondary">Highlights</h2>
         <div class="highlights-cards grid--3-cols">
@@ -230,7 +230,7 @@
       </div>
     </section>
 
-    <section class="cta-section">
+    <section class="cta-section" id="cta">
 
       <div class="container">
         <h2 class="heading-secondary">Get in touch with us!</h2>
