--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-  <header class="header nav-mobile-open">
+  <header class="header">
     <a href="#" class="logo">Lacey <span>Liliana</span></a>
-    <nav class="nav-desktop">
+    <nav class="main-nav">
       <ul class="nav-links">
         <li><a href="#how-it-works" class="nav-link">How it works</a></li>
         <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
@@ -29,13 +29,10 @@
         <li><a href="#cta" class="nav-link">Find out more</a></li>
       </ul>
     </nav>
-    <nav class="nav-mobile">
-      <ul>
-        <li><a href="#" class="nav-mobile-button nav-menu-button"><ion-icon name="menu-outline"></ion-icon></a></li>
-        <li><a href="#" class="nav-mobile-button nav-close-button"><ion-icon name="close-outline"></ion-icon></a></li>
-      </ul>
-
-    </nav>
+    <button class="btn-mobile-nav">
+      <a href="#" class="nav-menu-button"><ion-icon name="menu-outline"></ion-icon></a>
+      <a href="#" class="nav-close-button"><ion-icon name="close-outline"></ion-icon></a>
+    </button>
   </header>
 
   <main>
@@ -323,6 +320,8 @@
     </div>
   </footer>
 
+  <script src="scripts/script.js">
+  </script>
 </body>
 
 </html>
