--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <header class="header sticky-nav">
+  <header class="header">
     <a href="#" class="logo">Lacey <span>Liliana</span></a>
     <nav class="main-nav">
       <ul class="nav-links">
